src/scss/06_components/navigation/_branding-navigation.scss
$-branding-icon-size-desktop: $spacing-double;

.header-branding {
  --branding-height: 65px;
  --header-branding-padding: #{$spacing};
  background-color: $color-white;
  display: grid;
  grid-template-areas:
  '. logo . brand toggle .'
  'lang lang lang lang lang lang'
  'menu menu menu menu menu menu';
  grid-template-columns: var(--header-branding-padding) auto 1fr auto auto auto var(--header-branding-padding);
  grid-template-rows: var(--branding-height) auto auto;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 100;

  @include breakpoint($breakpoint-m) {
    --branding-height: 86px;
    --header-branding-padding: #{$spacing-and-half};
    grid-template-areas:
      '. logo . lang brand toggle .'
      'menu menu menu menu menu menu menu';
    grid-template-columns: var(--header-branding-padding) auto 1fr auto auto auto auto var(--header-branding-padding);
    grid-template-rows: var(--branding-height) auto;
  }

  @include breakpoint($breakpoint-m) {
    position: static;
    top: auto;
  }

  @include breakpoint($breakpoint-l) {
    --header-branding-padding: #{$spacing-double};
  }

  &::before {
    align-self: end;
    background-color: $color-white;
    border-bottom: 1px solid $color-black-20;
    content: '';
    grid-column: 1 / -1; // Full width
    grid-row: 1 / span 1; // First row
    height: 100%;
    z-index: 1;

    @include breakpoint($breakpoint-m) {
      height: 0;
    }
  }

  .toolbar-vertical & {
    top: var(--drupal-toolbar-height);
  }

  .block--branding-navigation {
    .menu {
      display: flex;
      list-style: none;
      margin: 0;
      padding: 0;
    }

    .menu__item + .menu__item {
      margin-left: $spacing-half;
    }

    .menu__link {
      @include font('special.navigation.icon_label');
      align-self: center;
      cursor: pointer;
      display: grid;
      grid-template-areas:
        'icon'
        'label';
      padding: 5px; // Handles spacing for "inside" focus ring
      text-align: center;
      user-select: none;

      // stylelint-disable-next-line max-nesting-depth
      @include breakpoint($breakpoint-l) {
        display: none;
      }

      &:focus,
      &:hover {
        text-decoration: underline;
      }

      &:active,
      &:focus {
        outline: 3px solid $color-black;
        outline-offset: -3px;
      }
    }

    .menu__link__icon {
      --icon-size: #{$-branding-icon-size-desktop};
      align-self: end;
      display: block;
      grid-area: icon;
      justify-self: center;
    }
  }
}

